@@ -6,11 +6,21 @@ Changelog for 1.3.22
 * Fixed error when trying to save multiple make/models for a part (Chris T)
 * Better error handling when date is entered into statement balance (Chris T)
 * Added pricegroup selection back to entity credit account (Chris T, 3550056)
-* Fix for slow performance with Form->all_years (Chris T, h/t Neil S)
+* Fix for slow performance with Form->all_years (Chris T, h/t Neil S)[1]
 * Revamped database load test cases (Chris T)
 * Fixed error on some screens with function not found (Chris T)
 * Fixed some test case errors due to tests written against older API (Chris T)
 * Fixed error: parts search not loading into the db pn Pg 9.1 only (Chris T)
+
+Chris T is Chris Travers
+Neil S is Neil Smith
+
+Footnotes:
+[1]:  Problem found on database with approx 200k records spanning a number of
+years.  The current approach will do a sequential scan of acc_trans per year
+found if no index is there.  Adding the index is required to get this to
+perform reasonably well.
+
 
 Niel S is Neil Smith
 
